# backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20231108213118_init.sql
src/: bracket.rs  main.rs  users.rs
src/web/: app.rs  auth.rs  protected.rs  restricted.rs
