[package]
name = "example-permissions"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.88"
axum = "0.8.1"
axum-login = "0.17.0"
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
thiserror = "2.0.0"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5.2"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
